// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scan Components - Snapshots > ScanContent - Snapshots > matches snapshot for default ScanContent 1`] = `
<div
  class="hidden md:flex"
  data-testid="container"
>
  <div
    data-testid="page-header"
  >
    <h1
      data-size="large"
      data-testid="page-title"
    >
      Scan 
      <span
        class="text-brand"
      >
        QR Code.
      </span>
    </h1>
    <div
      data-testid="page-subtitle"
    >
      Open Pubky Ring, tap 'add pubky', and scan this QR.
    </div>
  </div>
  <div
    class="flex bg-card text-card-foreground shadow-sm w-full flex-row items-center justify-center gap-12 overflow-hidden rounded-md p-6 lg:p-12"
    data-slot="card"
    data-testid="scan-qr-card"
  >
    <div
      class="hidden w-48 shrink-0 lg:block"
      data-slot="balanced-qr-illustration"
    >
      <img
        alt="Pubky Ring phone scanning a QR code"
        data-testid="next-image"
        height="192"
        src="/images/scan.webp"
        width="192"
      />
    </div>
    <div
      class="flex w-48 shrink-0 items-center justify-center"
      data-slot="balanced-qr-content"
    >
      <div
        class="relative flex size-48 items-center justify-center rounded-md bg-foreground p-2"
      >
        <img
          alt="Pubky Ring"
          data-testid="next-image"
          height="176"
          src="/images/pubky-ring-qr-example.webp"
          width="176"
        />
        <img
          alt="Pubky Ring"
          data-testid="next-image"
          height="48"
          src="/images/ring-logo.svg"
          width="48"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden w-48 shrink-0 lg:block"
      data-slot="balanced-qr-spacer"
    />
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanFooter - Snapshots > matches snapshot for default ScanFooter 1`] = `
<div
  data-testid="footer-links"
>
  Use ,[object Object], or any other 
  <a
    data-testid="link"
    href="https://pubky.org"
    target="_blank"
  >
    Pubky Core
  </a>
  –powered keychain.
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for desktop ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Scan 
    <span
      class="text-brand"
    >
      QR Code.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Open Pubky Ring, tap 'add pubky', and scan this QR.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for mobile ScanHeader 1`] = `
<div
  data-testid="page-header"
>
  <h1
    data-size="large"
    data-testid="page-title"
  >
    Tap to 
    <span
      class="text-brand"
    >
      Authorize.
    </span>
  </h1>
  <div
    data-testid="page-subtitle"
  >
    Tap the button to open Pubky Ring, and authorize with your pubky.
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanNavigation - Snapshots > matches snapshot for default ScanNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
</div>
`;
